# Freight

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  windows.yml
src/: lib.rs  main.rs
src/archive/: archive.rs  mod.rs
src/flags/: handler.rs  mod.rs
