[package]
name = "freight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
flate2 = "1.0.26"
owo-colors = "3.5.0"
tar = "0.4.39"
walkdir = "2.3.3"
zip = "0.6.6"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"